kubernetes-plugin/default-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  clusterIP: None
  selector:
    app: default-http-backend
